# px4-terrain-follower

./: .gitignore  CMakeLists.txt  README.md
common/ipc/: command_channel.h  shared_memory.h
common/types/: drone_command.h  drone_state.h
control/: CMakeLists.txt
control/behavior_trees/: autonomy.xml  offboard_missions.xml
control/include/: bt_mission_nodes.h  bt_mode_nodes.h  control_node.h  flight_mode_controller.h  offboard_mode.h
control/src/: basic_modes.cpp  bt_main.cpp  bt_mission_nodes.cpp  bt_mode_nodes.cpp  flight_mode_controller.cpp  offboard_mode.cpp
debug/: CMakeLists.txt
debug/src/: debug_monitor.cpp  state_reader.cpp
px4_interface/: CMakeLists.txt
px4_interface/src/: px4_mavlink_interface.cpp
